--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "ejs-electron": "^2.1.1",
-    "electron": "^11.2.0",
     "jquery": "^3.5.1"
+  },
+  "devDependencies": {
+    "electron": "^11.2.0"
   }
 }
