--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "excelClone",
+  "name": "activity",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
@@ -7,14 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron ."
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "devDependencies": {
+    "electron": "^10.1.1"
+  },
   "dependencies": {
     "ejs-electron": "^2.1.1",
     "jquery": "^3.5.1"
   },
-  "devDependencies": {
-    "electron": "^11.2.0"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
